moving benchmarks to testing